added index files

--- a/team.html
+++ b/team.html
@@ -1,5 +1,6 @@
 <html>
-<head> <style> p {font-size:18px;"} </style> </head>
+<head> <style> p {font-size:18px;} </style> </head>
+<style> body {background-color:blue;} </style>
 <h1> This is just some random stuff </html>
   <p> Once upon a time not long ago, I heard Run-DMC on the radio... </p>
   <h2> Yooooo </h2>
